--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires= ["setuptools",
-    "numpy~=1.22.4",
-    "pandas~=1.4.2",
-    "matplotlib~=3.5.2",
-    "sklearn~=0.0",
-    "scikit-learn~=1.1.1",
-    "scipy~=1.8.1"]
+    "numpy",
+    "pandas",
+    "matplotlib",
+    "sklearn",
+    "scikit-learn",
+    "scipy"]
 build-backend = "setuptools.build_meta"
