--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ requires= ["setuptools",
     "matplotlib",
     "sklearn",
     "scikit-learn",
-    "scipy"]
+    "scipy",
+    "openpyxl"
+]
 build-backend = "setuptools.build_meta"
